--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -5,7 +5,7 @@
     <div class="-mx-8 mb-8 sm:mx-0 ">
     <img
       class="w-full sm:rounded-xl  "
-      src="/images/image-omelette.jpeg"
+      src="/recipepage/images/image-omelette.jpeg"
       alt="imagen de cabecera"
     />
    </div>
