--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Nutrition from "../components/nutrition.astro";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="/recipepage/image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
 
     <title>Astro</title>
