--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import "./src/styles/global.css";
+import "../styles/global.css";
 import Header from "../components/header.astro";
 import Preparation from "../components/preparation.astro";
 import Ingredients from "../components/ingredients.astro";
