cambio de titulo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Nutrition from "../components/nutrition.astro";
     <link rel="icon" type="/image/svg+xml" href="/recipepage/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
 
-    <title>Astro</title>
+    <title>Recipe Page menu</title>
   </head>
   <body class=" font-Outfit text-Stone-600 bg-amber-100">
    
